infra/k8s/toy-system/gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: toy-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      terminationGracePeriodSeconds: 35
      tolerations:
        - key: "node-type"
          operator: "Equal"
          value: "low-power"
          effect: "NoSchedule"
      containers:
        - name: gateway-service
          image: localhost:5000/gateway-service:202608291813-b836314
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
