infra/k8s/toy-system/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: toy-system
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - name: http           # 加这一行，名字随便起，但要和ServiceMonitor里的port值对上
      port: 8080
      targetPort: 8080
